--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>dan.rojas</groupId>
     <artifactId>user-management</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -20,7 +20,6 @@
         <module>user.core</module>
         <module>user.cmd.api</module>
         <module>user.query.api</module>
-        <module>api-gateway</module>
     </modules>
 
 </project>
